--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,13 @@
       <img src="temp-icon.png" alt="Thermometer icon" />
       <div>
         <h2>Current Temperatures</h2>
-        <p>{{ currentDate }}</p>
+        <p>{{ currentDate | date : 'medium'}}</p>
       </div>
     </header>
-    <p>New York: {{ currentTemperaturs.newYork }}</p>
-    <p>Berlin: {{ currentTemperaturs.berlin }}</p>
-    <p>Paris: {{ currentTemperaturs.paris }}</p>
-    <p>Chicago: {{ currentTemperaturs.chicago }}</p>
+    <p>New York: {{ currentTemperaturs.newYork | temp : 'feh':'cel' }}</p>
+    <p>Berlin: {{ currentTemperaturs.berlin | temp : 'cel'}}</p>
+    <p>Paris: {{ currentTemperaturs.paris | temp : 'cel':'feh'}}</p>
+    <p>Chicago: {{ currentTemperaturs.chicago | temp : 'cel':'feh'}}</p>
   </article>
 
   <article class="temperatures">
@@ -22,7 +22,7 @@
       </div>
     </header>
     <ul>
-      @for (temperature of historicTemperatures; track temperature) {
+      @for (temperature of historicTemperatures | sort : 'desc'; track temperature) {
       <li (click)="onReset($index)">{{ temperature }}</li>
       }
     </ul>
